--- a/src/Busybee/SecurityBundle/Resources/views/User/request_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/request_content.html.twig
@@ -1,26 +1,39 @@
 {# src/General/SecurityBundle/Resources/views/User/request_content.html.twig #}
+
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
+{% set header = 'security.request.title' %}
+{% set translationDomain = 'BusybeeSecurityBundle' %}
+{% include 'BusybeeHomeBundle:Page:panelStart.html.twig' %}
 
 <form action="{{ path("busybee_security_user_reset_send_email") }}" method="post"  class="security_user_reset_request">
 	<div id="form_body" class="container-fluid">
-		<div class="row marketing">
+		<div class="row">
 			<div class="col-sm-6 well">
 				{% if invalid_username is defined %}
 				<div class="alert alert-warning" role="alert">
 					<strong>{{ 'Warning'|trans }}!</strong> {{ 'security.request.invalid_username'|trans({'%username%': invalid_username}) }}
 				</div>
 				{% endif %}
-				<label for="username">{{ 'security.request.username'|trans }}</label>
 				{% if forcePasswordReset %}<br /><span class="field-help">{{ 'security.request.forcePassword'|trans }}</span>{% endif %}
 				<input type="text" id="username" name="username" required {% if email is defined %} value="{{ email }}" {% endif %} class="form-control" />
+				<label for="username">{{ 'security.request.username'|trans }}</label>
 				<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}" />
 			</div>
 			<div class="col-sm-6 well">
 				<div class="form-group text-right">
-					<input type="submit" value="{{ 'security.request.submit'|trans }}" class="btn btn-success" />
+					<button type="submit" class="btn btn-success glyphicons glyphicons-message-forward"></button>
 				</div>	
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-sm-12 well">
+				<textarea class="form-control" id="comment" name="comment"></textarea>
+				<label for="comment">{{ 'security.request.label.comment'|trans }}</label>
+				<p class="alert-info alert">{{ 'security.help.request'|trans }}</p>
+			</div>
+		</div>
 	</div>
-</form>	
+</form>
+
+{% include 'BusybeeHomeBundle:Page:panelEnd.html.twig' %}
