--- a/src/Busybee/SecurityBundle/Resources/views/User/reset_content.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/reset_content.html.twig
@@ -1,7 +1,16 @@
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
+{% set header = 'user.reset.title' %}
+{% set translationDomain = 'BusybeeSecurityBundle' %}
+
+{% set h3Content = '' %}
+{% set path = "window.open('{{ path('home_page') }}','_self')" %}
+{% set h3Content = h3Content ~ cancelButton({'additional': 'onClick="{{ path }}"'})|raw %}
+{% set h3Content = h3Content ~ saveButton()|raw %}
+
 
 {{ form_start(form) }}
+{% include 'BusybeeHomeBundle:Page:panelStart.html.twig' %}
 	<div id="form_body" class="container-fluid">
 		<div class="row">
 			<div class="col-sm-6 well">
@@ -11,14 +20,16 @@
 					{{form_row(form.plainPassword.second) }}
 			</div>
 		</div>
-		<div class="row ">
-			<div class="col-sm-6 col-sm-offset-6 well">
-					<div class="text-right form-group">
-						{{form_widget(form.save) }}
-						{{form_widget(form.cancel) }}
-					</div>
+		<div class="row">
+			<div class="well col-sm-3 col-sm-offset-9">
+				<div class="form-group text-right">
+					<button type="button" id="generatePassword" name="generatePassword"
+							class="btn btn-info">{{ 'security.generatePassword'|trans }}</button>
 				</div>
 			</div>
 		</div>
 	</div>
+{% include 'BusybeeHomeBundle:Page:panelEnd.html.twig' %}
 {{form_end(form) }}
+
+
