--- a/src/Busybee/SecurityBundle/Resources/views/User/edit.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/edit.html.twig
@@ -15,15 +15,25 @@
 {% block headerLead %}{{ 'user.edit.description'|trans }}{% endblock headerLead %}
 
 {% block contentContainer %}
+    {% set header = 'user.edit.title' %}
+    {% set transDomain = 'BusybeeSecurityBundle' %}
+    {% set h3Content = '' %}
+    {% set path = "window.open('{{ path('home_page') }}','_self')" %}
+    {% set h3Content = h3Content ~ cancelButton({'additional': 'onClick="{{ path }}"'})|raw %}
+    {% set h3Content = h3Content ~ saveButton()|raw %}
+
 {{ form_start(form) }}
+    {% include 'BusybeeHomeBundle:Page:panelStart.html.twig' %}
+
 	<div id="form_body" class="container-fluid">
 		{% include "BusybeeSecurityBundle:User:edit_content.html.twig" %}
 	</div>
+    {% include 'BusybeeHomeBundle:Page:panelEnd.html.twig' %}
 {{ form_end(form) }}
 {% endblock contentContainer %}
 
 {% block javascripts %}
 	{{parent() }}
     {% include 'BusybeeHomeBundle:Toggle:script.html.twig' %}
-	{% include "BusybeeHomeBundle:Form:initAjaxForm.html.twig" %}
+    {% include "BusybeeHomeBundle:Form:initAjaxForm.html.twig" %}
 {% endblock javascripts %}
