--- a/src/Busybee/SecurityBundle/Resources/views/User/list.html.twig
+++ b/src/Busybee/SecurityBundle/Resources/views/User/list.html.twig
@@ -3,9 +3,6 @@
 
 {% trans_default_domain 'BusybeeSecurityBundle' %}
 
-
-
-
 {% block stylesheets %}
 {{ parent() }}
 	<link href="{{ asset('css/glyphicons.css') }}" type="text/css" rel="stylesheet" />
@@ -17,8 +14,12 @@
 {% block headerTitle %}{{ 'user.list.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'user.list.description'|trans }}{% endblock headerLead %}
 
+{% set header = 'user.list.title' %}
+{% set transDomain = 'BusybeeSecurityBundle' %}
+
 {% block contentContainer %}
 	{% include 'PaginationBundle:Default:index.html.twig' %}
+    {% include '@BusybeeHome/Page/panelStart.html.twig' %}
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-sm-12" id="result">
@@ -57,10 +58,10 @@
 				{{ user.email }}
 			</div>
 			<div class="col-sm-4 col-md-2">
-                <input type="checkbox" data-toggle="toggle" data-size="small" data-onstyle="success"
-                       data-offstyle="danger" data-on="<span class='halflings halflings-thumbs-up'></span>"
-                       data-off="<span class='halflings halflings-thumbs-down'></span>" class="yes-no"
-                       value="{{ user.getId }}" {% if user.getEnabled %}checked{% endif %} />
+				<input type="checkbox" data-toggle="toggle" data-size="mini" data-onstyle="success"
+					   data-offstyle="danger" data-on="<span class='halflings halflings-thumbs-up'></span>"
+					   data-off="<span class='halflings halflings-thumbs-down'></span>" class="yes-no"
+					   value="{{ user.getId }}" {% if user.getEnabled %}checked{% endif %} />
 			</div>
 			<div class="col-sm-5 col-md-2">
 				<button title='{{ 'user.edit.title'|trans}}' type="button" class="halflings halflings-edit btn btn-warning" onClick="window.open('{{ path('security_user_edit', {'id': user.getId}) }}','_self')"></button>
@@ -74,6 +75,7 @@
 		</div>
 	{% endfor %}
 	</div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 {% endblock contentContainer %}
 
 
