--- a/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
+++ b/src/Busybee/PersonBundle/Resources/views/Person/index.html.twig
@@ -8,164 +8,165 @@
 {% block headerTitle %}{{ 'person.people.title'|trans }}{% endblock headerTitle %}
 {% block headerLead %}{{ 'person.people.description'|trans }}{% endblock headerLead %}
 
-
+{% block stylesheets %}
+    {{ parent() }}
+    {% include '@BusybeeHome/Toggle/style.html.twig' %}
+{% endblock stylesheets %}
 
 {% block contentContainer %}
 	{% include 'PaginationBundle:Default:index.html.twig' with {'form_array': {'action': path('person_manage') } } %}
-	<div class="panel panel-primary busybee-panel">
-		<div class="panel-heading">
-			<h3 class="panel-title">{{ 'people.title'|trans}} <button title='{{ 'person.title.add'|trans}}' type="button" class="halflings halflings-plus-sign btn btn-primary" onClick="window.open('{{ path('person_edit', {'id': 'Add', 'currentSearch': pagination.search|replace({'%': ''}) }) }}','_self')" style="float: right;"></button>
-                <button title='{{ 'person.title.import'|trans}}' type="button" class="halflings halflings-import btn btn-primary" onClick="window.open('{{ path('people_import') }}','_self')" style="float: right;"></button> </h3>
-		</div>
-		<div class="panel-body">
-			<div class="container-fluid well">
-				<div class="row">
-					<div class="col-md-12 col-sm-12" id="peopleError">
 
-					</div>
-				</div>
-				<div class="row row-header">
-                    <div class="col-md-1 hidden-sm hidden-xs">
-                        {{ 'person.title.photo'|trans }}
+    {% set route = path('person_edit', {'id': 'Add', 'currentSearch': pagination.search|replace({'%': ''}) }) %}
+    {% set route = "window.open('" ~ route ~ "','_self')" %}
+    {% set h3Content = addButton({'additional': 'onClick="' ~ route ~ '"'})|raw %}
+
+    {% set route = "location.href('" ~ path('people_import') ~ "')" %}
+    {% set h3Content = h3Content ~ uploadButton({'transDomain': 'BusybeePersonBundle', 'additional': 'onClick="' ~ route ~ '"', 'title': 'person.title.import'})|raw %}
+
+    {% include '@BusybeeHome/Page/panelStart.html.twig' with {'header': 'people.title', 'transDomain': 'BusybeePersonBundle'} %}
+    <div class="container-fluid well">
+        <div class="row">
+            <div class="col-md-12 col-sm-12" id="peopleError">
+
+            </div>
+        </div>
+        <div class="row row-header">
+            <div class="col-md-1 hidden-sm hidden-xs">
+                {{ 'person.title.photo'|trans }}
+            </div>
+            <div class="col-sm-2 col-md-2" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Family Name' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'person.title.familyName'|trans }}
+                {% else %}
+                    {{ 'person.title.familyName'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-sm-2 col-md-2" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Given Name' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'person.title.givenName'|trans }}
+                {% else %}
+                    {{ 'person.title.givenName'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-md-2 hidden-sm hidden-xs" style="display: inline-block;">
+                {% if pagination.getSortByName == 'Email' %}
+                    <span class="halflings halflings-sort-by-alphabet"></span> {{ 'person.title.email'|trans }}
+                {% else %}
+                    {{ 'person.title.email'|trans }}
+                {% endif %}
+            </div>
+            <div class="col-md-2 col-sm-2 text-center" style="display: inline-block;">
+                {{ 'person.actions'|trans }}
+            </div>
+            <div class="col-md-3 hidden-sm hidden-xs text-center">
+                {{ 'person.title.category'|trans }}
+                <div class="row ">
+                    <div class="col-sm-4 text-center">
+                        <span style="font-size: 9px;">{{ 'person.category.staff'|trans }}</span>
                     </div>
-					<div class="col-sm-2 col-md-2" style="display: inline-block;">
-						{% if pagination.getSortByName == 'Family Name' %}
-							<span class="halflings halflings-sort-by-alphabet"></span> {{ 'person.title.familyName'|trans }}
-						{% else %}
-							{{ 'person.title.familyName'|trans }}
-						{% endif %}
-					</div>
-					<div class="col-sm-2 col-md-2" style="display: inline-block;">
-						{% if pagination.getSortByName == 'Given Name' %}
-							<span class="halflings halflings-sort-by-alphabet"></span> {{ 'person.title.givenName'|trans }}
-						{% else %}
-							{{ 'person.title.givenName'|trans }}
-						{% endif %}
-					</div>
-					<div class="col-md-2 hidden-sm hidden-xs" style="display: inline-block;">
-                        {% if pagination.getSortByName == 'Email' %}
-							<span class="halflings halflings-sort-by-alphabet"></span> {{ 'person.title.email'|trans }}
-                        {% else %}
-                            {{ 'person.title.email'|trans }}
-                        {% endif %}
-					</div>
-                    <div class="col-md-2 col-sm-2 text-center" style="display: inline-block;">
-                       {{ 'person.actions'|trans }}
+                    <div class="col-sm-4 text-center">
+                        <span style="font-size: 9px;">{{ 'person.category.student'|trans }}</span>
                     </div>
-                    <div class="col-md-3 hidden-sm hidden-xs text-center">
-                        {{ 'person.title.category'|trans }}
-                        <div class="row ">
-                            <div class="col-sm-3 text-center">
-                                <span style="font-size: 9px;">{{ 'person.category.staff'|trans }}</span>
-                            </div>
-                            <div class="col-sm-3 text-center">
-                                <span style="font-size: 9px;">{{ 'person.category.student'|trans }}</span>
-                            </div>
-                            <div class="col-sm-3 text-center">
-                                <span style="font-size: 9px;">{{ 'person.category.caregiver'|trans }}</span>
-                            </div>
-                            <div class="col-sm-3 text-center">
-                                <span style="font-size: 9px;">{{ 'person.category.user'|trans }}</span>
-                            </div>
+                    <div class="col-sm-4 text-center">
+                        <span style="font-size: 9px;">{{ 'person.category.user'|trans }}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        {% for person in pagination.getResult %}
+            <div class="row row-striped">
+                <div class="col-md-1 hidden-sm hidden-xs">
+                    {{ person.getPhoto75('left')|raw }}
+                </div>
+                <div class="col-sm-2 col-md-2 form-inline">
+                    {{ person.surname }}
+                </div>
+                <div class="col-sm-2 col-md-2 form-inline">
+                    {{ person.firstName }}
+                </div>
+                <div class="col-md-2 hidden-sm hidden-xs" style="display: inline-block;">
+                    {{ person.email }}
+                </div>
+                <div class="col-md-2 col-sm-2 text-center form-inline">
+
+                    <button title='{{ 'person.title.edit'|trans }}' type="button"
+                            class="halflings halflings-edit btn btn-warning"
+                            onClick="window.open('{{ path('person_edit', {'id': person.id, 'currentSearch': pagination.search|replace({'%': ''}) }) }}', '_self')"></button>
+                </div>
+                <div class="col-md-3 hidden-sm hidden-xs">
+                    <div class="row">
+                        <div class="col-sm-4">
+                            {% set toggle = 'data-toggle=toggle data-onstyle=success data-offstyle=danger data-height=25 data-size=small data-on="<span class=\'halflings halflings-thumbs-up\'></span>" data-off="<span class=\'halflings halflings-thumbs-down\'></span>"' %}
+                            {% if isStaff(person) and canDeleteStaff(person) %}
+                                <input type="checkbox" id="staffToggle{{ person.id }}"
+                                       title="{{ 'person.staff.toggle'|trans }}" class="staffToggle"
+                                       checked {{ toggle|raw }} />
+                            {% elseif canBeStaff(person) and not isStaff(person) %}
+                                <input type="checkbox" id="staffToggle{{ person.id }}"
+                                       title="{{ 'person.staff.toggle'|trans }}" class="staffToggle" {{ toggle|raw }} />
+                            {% elseif not isStaff(person) %}
+                                <input type="checkbox" id="staffToggle{{ person.id }}"
+                                       title="{{ 'person.staff.toggle'|trans }}" class="staffToggle" {{ toggle|raw }}
+                                       disabled/>
+                            {% else %}
+                                <input type="checkbox" id="staffToggle{{ person.id }}"
+                                       title="{{ 'person.staff.toggle'|trans }}" class="staffToggle"
+                                       checked {{ toggle|raw }} disabled/>
+                            {% endif %}
+                        </div>
+                        <div class="col-sm-4">
+                            {% if isStudent(person) and canDeleteStudent(person, get_parameter('person')) %}
+                                <input type="checkbox" id="studentToggle{{ person.id }}"
+                                       title="{{ 'person.student.toggle'|trans }}" checked
+                                       class="studentToggle" {{ toggle|raw }} />
+                            {% elseif canBeStudent(person) and not isStudent(person) %}
+                                <input type="checkbox" id="studentToggle{{ person.id }}"
+                                       title="{{ 'person.student.toggle'|trans }}"
+                                       class="studentToggle" {{ toggle|raw }} />
+                            {% elseif not isStudent(person) %}
+                                <input type="checkbox" id="studentToggle{{ person.id }}"
+                                       title="{{ 'person.student.toggle'|trans }}"
+                                       class="studentToggle" {{ toggle|raw }} disabled/>
+                            {% else %}
+                                <input type="checkbox" id="studentToggle{{ person.id }}"
+                                       title="{{ 'person.student.toggle'|trans }}" class="studentToggle"
+                                       checked {{ toggle|raw }} disabled/>
+                            {% endif %}
+                        </div>
+                        <div class="col-sm-4">
+                            {% if isUser(person) and canDeleteUser(person) %}
+                                <input type="checkbox" id="userToggle{{ person.id }}"
+                                       title="{{ 'person.user.toggle'|trans }}" checked
+                                       class="userToggle" {{ toggle|raw }} />
+                            {% elseif canBeUser(person) and not isUser(person) %}
+                                <input type="checkbox" id="userToggle{{ person.id }}"
+                                       title="{{ 'person.user.toggle'|trans }}" class="userToggle" {{ toggle|raw }} />
+                            {% elseif not isUser(person) %}
+                                <input type="checkbox" id="userToggle{{ person.id }}"
+                                       title="{{ 'person.user.toggle'|trans }}" class="userToggle" {{ toggle|raw }}
+                                       disabled/>
+                            {% else %}
+                                <input type="checkbox" id="userToggle{{ person.id }}"
+                                       title="{{ 'person.user.toggle'|trans }}" checked
+                                       class="userToggle" {{ toggle|raw }} disabled/>
+                            {% endif %}
                         </div>
                     </div>
-				</div>
-
-
-
-			{% for person in pagination.getResult %}
-				<div class="row row-striped">
-                    <div class="col-md-1 hidden-sm hidden-xs">
-                        {{ person.getPhoto75('left')|raw }}
-                    </div>
-					<div class="col-sm-2 col-md-2 form-inline">
-						{{ person.surname }}
-					</div>
-					<div class="col-sm-2 col-md-2 form-inline">
-						{{ person.firstName }}
-					</div>
-					<div class="col-md-2 hidden-sm hidden-xs" style="display: inline-block;">
-                        {{ person.email }}
-					</div>
-					<div class="col-md-2 col-sm-2 text-center form-inline">
-
-						<button title='{{ 'person.title.edit'|trans}}' type="button" class="halflings halflings-edit btn btn-warning" onClick="window.open('{{ path('person_edit', {'id': person.id, 'currentSearch': pagination.search|replace({'%': ''}) }) }}', '_self')"></button>
-                    </div>
-                    <div class="col-md-3 hidden-sm hidden-xs">
-                        <div class="row">
-                            <div class="col-sm-3">
-                                {% if isStaff(person) and canDeleteStaff(person)  %}
-                                    <button id="staffToggle{{ person.id }}" title='{{ 'person.staff.toggle'|trans }}'
-                                            type="button"
-                                            class="staffToggle halflings halflings-ok btn btn-success"></button>
-                                {% elseif canBeStaff(person) and not isStaff(person) %}
-                                    <button id="staffToggle{{ person.id }}" title='{{ 'person.staff.toggle'|trans }}'
-                                            type="button"
-                                            class="staffToggle halflings halflings-remove btn btn-danger"></button>
-                                {% elseif not isStaff(person) %}
-                                    <button id="staffToggle{{ person.id }}" title='{{ 'person.staff.toggle'|trans}}' type="button" class="staffToggle halflings halflings-remove btn btn-default" disabled></button>
-                                {% else %}
-                                    <button id="staffToggle{{ person.id }}" title='{{ 'person.staff.toggle'|trans}}' type="button" class="staffToggle halflings halflings-ok btn btn-default" disabled></button>
-                                {% endif %}
-                            </div>
-                            <div class="col-sm-3">
-                                {% if isStudent(person) and canDeleteStudent(person, get_parameter('person'))  %}
-                                    <button id="studentToggle{{ person.id }}" title='{{ 'person.student.toggle'|trans}}' type="button" class="studentToggle halflings halflings-ok  btn btn-success"></button>
-                                {% elseif canBeStudent(person) and not isStudent(person) %}
-                                    <button id="studentToggle{{ person.id }}" title='{{ 'person.student.toggle'|trans}}' type="button" class="studentToggle halflings halflings-remove  btn btn-danger"></button>
-                                {% elseif not isStudent(person) %}
-                                    <button id="studentToggle{{ person.id }}" title='{{ 'person.student.toggle'|trans}}' type="button" class="studentToggle halflings halflings-remove btn btn-default" disabled></button>
-                                {% else %}
-                                    <button id="studentToggle{{ person.id }}" title='{{ 'person.student.toggle'|trans}}' type="button" class="studentToggle halflings halflings-ok btn btn-default" disabled></button>
-                                {% endif %}
-                            </div>
-                            <div class="col-sm-3">
-                            </div>
-                            <div class="col-sm-3">
-                                {% if isUser(person) and canDeleteUser(person)  %}
-                                    <button id="userToggle{{ person.id }}" title='{{ 'person.user.toggle'|trans}}' type="button" class="userToggle halflings halflings-ok  btn btn-success"></button>
-                                {% elseif canBeUser(person) and not isUser(person) %}
-                                    <button id="userToggle{{ person.id }}" title='{{ 'person.user.toggle'|trans}}' type="button" class="userToggle halflings halflings-remove  btn btn-danger"></button>
-                                {% elseif not isUser(person) %}
-                                    <button id="userToggle{{ person.id }}" title='{{ 'person.user.toggle'|trans}}' type="button" class="userToggle halflings halflings-remove btn btn-default" disabled></button>
-                                {% else %}
-                                    <button id="userToggle{{ person.id }}" title='{{ 'person.user.toggle'|trans}}' type="button" class="userToggle halflings halflings-ok btn btn-default" disabled></button>
-                                {% endif %}
-                            </div>
-                        </div>
-					</div>
-				</div>
-			{% endfor %}
-			</div>
-		</div>
-	</div>
+                </div>
+            </div>
+        {% endfor %}
+    </div>
+    {% include '@BusybeeHome/Page/panelEnd.html.twig' %}
 {% endblock contentContainer %}
 
 {% block javascripts %}
     {{ parent() }}
     {% include 'BusybeeHomeBundle:Scripts:fadeAlert.js.twig' %}
+    {% include '@BusybeeHome/Toggle/script.html.twig' %}
 	<script type="text/javascript">
-        $(".careGiverToggle").on('click', function() {
-            var id = $(this).prop('id');
-            id = id.substring(15);
-            var route = "{{ path('person_toggle_caregiver', {'id': '__id__'}) }}";
-            route = route.replace('__id__', id);
-            $.ajax({
-                url: route,
-                type: "POST",
-                success: function(data){
-                    $("#peopleError").html(data.message);
-                    if (data.status == "removed"){
-                        $("#careGiverToggle" + id).removeClass().addClass("careGiverToggle halflings halflings-remove btn btn-danger");
-                    }
-                    if (data.status == "added"){
-                        $("#careGiverToggle" + id).removeClass().addClass("careGiverToggle halflings halflings-ok btn btn-success");
-                    }
-                    $(".fadeAlert").fadeOut(5000);
-                }
-            })
-        });
-        $(".studentToggle").on('click', function() {
+        $(".studentToggle").change(function () {
             var id = $(this).prop('id');
             id = id.substring(13);
             var route = "{{ path('person_toggle_student', {'id': '__id__'}) }}";
@@ -185,7 +186,7 @@
                 }
             })
         });
-        $(".staffToggle").on('click', function() {
+        $(".staffToggle").change(function () {
             var id = $(this).prop('id');
             id = id.substring(11);
             var route = "{{ path('person_toggle_staff', {'id': '__id__'}) }}";
@@ -205,7 +206,7 @@
                 }
             })
         });
-        $(".userToggle").on('click', function() {
+        $(".userToggle").change(function () {
             var id = $(this).prop('id');
             id = id.substring(10);
             var route = "{{ path('person_toggle_user', {'id': '__id__'}) }}";
